<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <EditText
        android:id="@+id/etPlayerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:background="@drawable/edittext_border"
        android:hint="@string/hint_player_name"
        android:inputType="textPersonName"
        android:padding="12dp"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etPlayerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:autofillHints=""
        android:background="@drawable/edittext_border"
        android:hint="@string/hint_player_email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etPlayerPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/edittext_border"
        android:hint="@string/hint_player_phone"
        android:inputType="phone"
        android:padding="12dp"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

</LinearLayout>